ipc/ipdl/test/ipdl/ok/PVirtualSendImpl.ipdl
async protocol PVirtualSendImpl
{
child:
  [VirtualSendImpl] async MockableFoo();
};
