ipc/ipdl/test/ipdl/error/PLazySendInvalid.ipdl
//error: unexpected value for valueless attribute `LazySend'

async protocol PLazySendInvalid {
child:
    [LazySend=Invalid] async Message();
};
